--- a/doc/doxygen.cfg
+++ b/doc/doxygen.cfg
@@ -57,7 +57,7 @@ INPUT                  = ../include
 FILE_PATTERNS          = *
 RECURSIVE              = YES
 EXCLUDE                = 
-EXCLUDE_PATTERNS       = 
+EXCLUDE_PATTERNS       = *.svn*
 EXAMPLE_PATH           = 
 EXAMPLE_PATTERNS       = 
 IMAGE_PATH             = 
