--- a/examples/openalpp/Makefile.am
+++ b/examples/openalpp/Makefile.am
@@ -1,20 +1,17 @@
 
 INCLUDES = -I$(top_builddir)/include
 
-if WITH_PORTAUDIO
-portaudiolibs = -lportaudio
-endif
 if WITH_OGGVORBIS
 ogglibs = -lvorbisfile -lvorbis -logg
 endif
 
 
-LDADD = ../src/libopenalpp.la -lopenal $(portaudiolibs) $(ogglibs) -lOpenThreads
+LDADD = ../src/libopenalpp.la -lopenal  $(ogglibs) -lOpenThreads
 
 
-noinst_PROGRAMS = openalpp_testfstream openalpp_multiple openalpp_testmic openalpp_simple openalpp_moving 
+noinst_PROGRAMS = openalpp_testfstream openalpp_playogg openalpp_multiple openalpp_capture openalpp_simple openalpp_moving openalpp_multiple_oggstreams
 
-openalpp_testmic_SOURCES = testmic.cpp
+openalpp_capture_SOURCES = capture.cpp
 
 openalpp_simple_SOURCES = simple.cpp
 
@@ -23,3 +20,7 @@ openalpp_moving_SOURCES = moving.cpp
 openalpp_testfstream_SOURCES = testfstream.cpp
 
 openalpp_multiple_SOURCES = multiple.cpp
+
+openalpp_playogg_SOURCES = playOgg.cpp
+
+openalpp_multiple_oggstreams_SOURCES = multiple_oggstreams.cpp
