- Fixed numerous bugs in streaming code.   - Restructured the strange copying of Streams/Samples in constructors of Source class.   - Using more consistent reference pointing   - Got rid of crasch bug if Sources remained unallocated.   - Added "menus" to capture demo and playOgg demo.

--- a/VisualStudio/examples/openalpp/capture.vcproj
+++ b/VisualStudio/examples/openalpp/capture.vcproj
@@ -29,6 +29,7 @@
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="TRUE"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderFile=".\$(IntDir)/$(TargetName).pch"
 				AssemblerListingLocation="$(IntDir)/"
@@ -90,6 +91,7 @@
 				PreprocessorDefinitions="WIN32,_DEBUG,_CONSOLE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderFile=".\$(IntDir)/$(TargetName)d.pch"
 				AssemblerListingLocation="$(IntDir)/"
