--- a/VisualStudio/examples/openalpp/playOgg.vcproj
+++ b/VisualStudio/examples/openalpp/playOgg.vcproj
@@ -29,6 +29,7 @@
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="TRUE"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderFile=".\$(IntDir)/$(TargetName).pch"
 				AssemblerListingLocation="$(IntDir)/"
@@ -90,6 +91,7 @@
 				PreprocessorDefinitions="WIN32,_DEBUG,_CONSOLE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
+				RuntimeTypeInfo="TRUE"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderFile=".\$(IntDir)/$(TargetName)d.pch"
 				AssemblerListingLocation="$(IntDir)/"
