--- a/examples/openalpp/Makefile.am
+++ b/examples/openalpp/Makefile.am
@@ -1,13 +1,26 @@
+#
+# Copyright (C) 2004-2006 Anders Backman, VRlab <andersb@cs.umu.se>
+# Copyright (C) 2006 Loic Dachary <loic@gnu.org>
+#
+#    This library is free software; you can redistribute it and/or
+#    modify it under the terms of the GNU Lesser General Public
+#    License as published by the Free Software Foundation; either
+#    version 2.1 of the License, or (at your option) any later version.
+#
+#    This library is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+#    Lesser General Public License for more details.
+#
+#    You should have received a copy of the GNU Lesser General Public
+#    License along with this library; if not, write to the Free Software
+#    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+#
+MAINTAINERCLEANFILES = Makefile.in
 
 INCLUDES = -I$(top_builddir)/include
 
-if WITH_OGGVORBIS
-ogglibs = -lvorbisfile -lvorbis -logg
-endif
-
-
-LDADD = ../src/libopenalpp.la -lopenal  $(ogglibs) -lOpenThreads
-
+LDADD = ../../src/openalpp/libopenalpp.la 
 
 noinst_PROGRAMS = openalpp_testfstream openalpp_playogg openalpp_multiple openalpp_capture openalpp_simple openalpp_moving openalpp_multiple_oggstreams
 
