--- a/VisualStudio/openalpp/openalpp.vcproj
+++ b/VisualStudio/openalpp/openalpp.vcproj
@@ -1,151 +1,211 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8,00"
 	Name="oalpp"
 	ProjectGUID="{2BA79A95-C0A7-4F13-9D84-7912AEA4A8B3}"
-	SccProjectName=""
-	SccLocalPath="">
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="../../lib"
 			IntermediateDirectory=".\$(ProjectName)_release"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE"
-			CharacterSet="2">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="_DEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\../lib/openalpp.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				OptimizeForProcessor="3"
 				AdditionalIncludeDirectories="../../include"
 				PreprocessorDefinitions="_DEBUG;_WINDOWS;_USRDLL;OPENALPP_EXPORTS;WIN32"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="2"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Debug/openalpp.pch"
 				AssemblerListingLocation=".\Debug/"
 				ObjectFile=".\Debug/"
 				ProgramDataBaseFileName=".\Debug/"
 				BrowseInformation="1"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
+				SuppressStartupBanner="true"
 				DebugInformationFormat="4"
-				CompileAs="0"/>
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="osgdbd.lib osgd.lib openthreadswin32d.lib alut.lib openal32.lib  winmm.lib  dsound.lib vorbisfile_d.lib ogg_d.lib"
-				OutputFile="../../bin/$(ProjectName)d.dll"
-				LinkIncremental="2"
-				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories=""
-				IgnoreDefaultLibraryNames="LIBCD"
-				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile="$(OutDir)/$(ProjectName)d.pdb"
-				ImportLibrary="../../lib/$(ProjectName)d.lib"/>
-			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="_DEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\../lib/openalpp.tlb"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="_DEBUG"
-				Culture="1053"/>
+				Culture="1053"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCLinkerTool"
+				AdditionalOptions="/MACHINE:I386"
+				AdditionalDependencies="osgdbd.lib osgd.lib openthreadswin32d.lib alut.lib openal32.lib winmm.lib  vorbisfile_d.lib ogg_d.lib"
+				OutputFile="../../bin/$(ProjectName)d.dll"
+				LinkIncremental="2"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories=""
+				IgnoreDefaultLibraryNames="LIBCD"
+				GenerateDebugInformation="true"
+				ProgramDatabaseFile="$(OutDir)/$(ProjectName)d.pdb"
+				ImportLibrary="../../lib/$(ProjectName)d.lib"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="../../lib"
 			IntermediateDirectory=".\$(ProjectName)_release"
 			ConfigurationType="2"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			UseOfMFC="0"
-			ATLMinimizesCRunTimeLibraryUsage="FALSE"
-			CharacterSet="2">
+			ATLMinimizesCRunTimeLibraryUsage="false"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+				PreprocessorDefinitions="NDEBUG"
+				MkTypLibCompatible="true"
+				SuppressStartupBanner="true"
+				TargetEnvironment="1"
+				TypeLibraryName=".\../lib/openalpp.tlb"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
-				OptimizeForProcessor="3"
 				AdditionalIncludeDirectories="../../include"
 				PreprocessorDefinitions="NDEBUG;_WINDOWS;_USRDLL;OPENALPP_EXPORTS;WIN32"
-				StringPooling="TRUE"
+				StringPooling="true"
 				RuntimeLibrary="2"
-				EnableFunctionLevelLinking="TRUE"
-				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="2"
+				EnableFunctionLevelLinking="true"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="0"
 				PrecompiledHeaderFile=".\Release/openalpp.pch"
 				AssemblerListingLocation=".\Release/"
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName=".\Release/"
 				WarningLevel="3"
-				SuppressStartupBanner="TRUE"
-				CompileAs="0"/>
+				SuppressStartupBanner="true"
+				CompileAs="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
-			<Tool
-				Name="VCLinkerTool"
-				AdditionalOptions="/MACHINE:I386"
-				AdditionalDependencies="osgdb.lib  osg.lib  openthreadswin32.lib alut.lib openal32.lib vorbisfile.lib ogg.lib winmm.lib wsock32.lib dsound.lib"
-				OutputFile="../../bin/$(ProjectName).dll"
-				LinkIncremental="1"
-				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories=""
-				IgnoreDefaultLibraryNames="LIBCD"
-				ProgramDatabaseFile="$(OutDir)/$(ProjectName).pdb"
-				ImportLibrary="../../lib/$(ProjectName).lib"/>
-			<Tool
-				Name="VCMIDLTool"
-				PreprocessorDefinitions="NDEBUG"
-				MkTypLibCompatible="TRUE"
-				SuppressStartupBanner="TRUE"
-				TargetEnvironment="1"
-				TypeLibraryName=".\../lib/openalpp.tlb"/>
-			<Tool
-				Name="VCPostBuildEventTool"/>
-			<Tool
-				Name="VCPreBuildEventTool"/>
-			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
 			<Tool
 				Name="VCResourceCompilerTool"
 				PreprocessorDefinitions="NDEBUG"
-				Culture="1053"/>
+				Culture="1053"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCLinkerTool"
+				AdditionalOptions="/MACHINE:I386"
+				AdditionalDependencies="osgdb.lib osg.lib openthreadswin32.lib alut.lib openal32.lib vorbisfile.lib ogg.lib"
+				OutputFile="../../bin/$(ProjectName).dll"
+				LinkIncremental="1"
+				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories=""
+				IgnoreDefaultLibraryNames="LIBCD"
+				ProgramDatabaseFile="$(OutDir)/$(ProjectName).pdb"
+				ImportLibrary="../../lib/$(ProjectName).lib"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCXDCMakeTool"
+			/>
+			<Tool
+				Name="VCBscMakeTool"
+			/>
+			<Tool
+				Name="VCFxCopTool"
+			/>
+			<Tool
+				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
+			/>
+			<Tool
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -153,139 +213,182 @@
 	<Files>
 		<Filter
 			Name="Source files"
-			Filter="">
+			>
 			<File
-				RelativePath="..\..\src\openalpp\AudioBase.cpp">
+				RelativePath="..\..\src\openalpp\AudioBase.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\AudioConvert.cpp">
+				RelativePath="..\..\src\openalpp\AudioConvert.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\AudioEnvironment.cpp">
+				RelativePath="..\..\src\openalpp\AudioEnvironment.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Capture.cpp">
+				RelativePath="..\..\src\openalpp\Capture.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\DeviceUpdater.cpp">
+				RelativePath="..\..\src\openalpp\DeviceUpdater.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Error.cpp">
+				RelativePath="..\..\src\openalpp\Error.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Event.cpp">
+				RelativePath="..\..\src\openalpp\Event.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\FileStream.cpp">
+				RelativePath="..\..\src\openalpp\FileStream.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\FileStreamUpdater.cpp">
+				RelativePath="..\..\src\openalpp\FileStreamUpdater.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\GroupSource.cpp">
+				RelativePath="..\..\src\openalpp\GroupSource.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Listener.cpp">
+				RelativePath="..\..\src\openalpp\Listener.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\NetStream.cpp">
+				RelativePath="..\..\src\openalpp\NetStream.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\NetUpdater.cpp">
+				RelativePath="..\..\src\openalpp\NetUpdater.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Openalpp.cpp">
+				RelativePath="..\..\src\openalpp\Openalpp.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Sample.cpp">
+				RelativePath="..\..\src\openalpp\Sample.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\SoundData.cpp">
+				RelativePath="..\..\src\openalpp\SoundData.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Source.cpp">
+				RelativePath="..\..\src\openalpp\Source.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\SourceBase.cpp">
+				RelativePath="..\..\src\openalpp\SourceBase.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\Stream.cpp">
+				RelativePath="..\..\src\openalpp\Stream.cpp"
+				>
 			</File>
 			<File
-				RelativePath="..\..\src\openalpp\StreamUpdater.cpp">
+				RelativePath="..\..\src\openalpp\StreamUpdater.cpp"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="Header files"
-			Filter="">
+			>
 			<File
-				RelativePath="..\..\include\openalpp\AudioBase">
+				RelativePath="..\..\include\openalpp\AudioBase"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\AudioConvert">
+				RelativePath="..\..\include\openalpp\AudioConvert"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\AudioEnvironment">
+				RelativePath="..\..\include\openalpp\AudioEnvironment"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Capture">
+				RelativePath="..\..\include\openalpp\Capture"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\config">
+				RelativePath="..\..\include\openalpp\config"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\DeviceUpdater">
+				RelativePath="..\..\include\openalpp\DeviceUpdater"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Error">
+				RelativePath="..\..\include\openalpp\Error"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Event">
+				RelativePath="..\..\include\openalpp\Event"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Export">
+				RelativePath="..\..\include\openalpp\Export"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\FileStream">
+				RelativePath="..\..\include\openalpp\FileStream"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\FileStreamUpdater">
+				RelativePath="..\..\include\openalpp\FileStreamUpdater"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\GroupSource">
+				RelativePath="..\..\include\openalpp\GroupSource"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Listener">
+				RelativePath="..\..\include\openalpp\Listener"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\NetStream">
+				RelativePath="..\..\include\openalpp\NetStream"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\NetUpdater">
+				RelativePath="..\..\include\openalpp\NetUpdater"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\PositionedObject">
+				RelativePath="..\..\include\openalpp\PositionedObject"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Sample">
+				RelativePath="..\..\include\openalpp\Sample"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\SoundData">
+				RelativePath="..\..\include\openalpp\SoundData"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Source">
+				RelativePath="..\..\include\openalpp\Source"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\SourceBase">
+				RelativePath="..\..\include\openalpp\SourceBase"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\Stream">
+				RelativePath="..\..\include\openalpp\Stream"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\StreamUpdater">
+				RelativePath="..\..\include\openalpp\StreamUpdater"
+				>
 			</File>
 			<File
-				RelativePath="..\..\include\openalpp\windowsstuff">
+				RelativePath="..\..\include\openalpp\windowsstuff"
+				>
 			</File>
 		</Filter>
 	</Files>
