- Added SoundState::setEnable()/getEnable() to make it possible to stop a SoundState from making any sound at all.

--- a/VisualStudio/examples/osgal/Example_osgaldemo.vcproj
+++ b/VisualStudio/examples/osgal/Example_osgaldemo.vcproj
@@ -71,7 +71,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="osggad.lib oalppd.lib osgd.lib osgproducerd.lib osgutild.lib osgdbd.lib"
+				AdditionalDependencies="osggad.lib  osgd.lib osgproducerd.lib osgutild.lib osgdbd.lib"
 				OutputFile="../../../bin/osgALd.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -166,7 +166,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="osgga.lib oalpp.lib glu32.lib opengl32.lib osg.lib osgproducer.lib osgutil.lib osgAL.lib osgdb.lib"
+				AdditionalDependencies="openthreadswin32.lib osgga.lib  glu32.lib opengl32.lib osg.lib osgproducer.lib osgutil.lib osgAL.lib osgdb.lib"
 				OutputFile="../../../bin/osgAL.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
